Refactored api design and generated backend stubs
