# backend/generated-server/handlers/api_auth.go
@@ -1,8 +1,10 @@
 package handlers
+
 import (
-	"github.com/GIT_USER_ID/GIT_REPO_ID/models"
-	"github.com/labstack/echo/v4"
 	"net/http"
+
+	"github.com/ch00z00/kotobalize/models"
+	"github.com/labstack/echo/v4"
 )
 
 // GetCurrentUser - Get current authenticated user's information
@@ -21,10 +23,9 @@ func (c *Container) LoginUser(ctx echo.Context) error {
 }
 
 
-// RegisterUser - Register a new user
-func (c *Container) RegisterUser(ctx echo.Context) error {
+// SignupUser - Sign up a new user
+func (c *Container) SignupUser(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, models.HelloWorld {
 		Message: "Hello World",
 	})
 }
-
